sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:14: error: Boolean does not take parameters
        swap(i,i+1);
            ^AlgCocktailSort2:26: error: Boolean does not take parameters
        swap(i , i+1);
            ^